Add API to get a user's articles
