# src/main/resources/openapi.yaml
@@ -90,6 +90,27 @@ paths:
                 $ref: '#/components/schemas/User'
         404:
           description: User not found
+  /user/{username}/articles:
+    get:
+      description: Get an user's article
+      operationId: getAllArticlesOfUser
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: An user's articles
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Article'
+        404:
+          description: User not found
   /register:
     post:
       description: Register
